# winrole-backend

./: README.md  yes  yes.pub
api/: Cargo.toml
api/src/: main.rs
api/src/jwt/: claims.rs  jwt_helper.rs  mod.rs
api/src/models/: game.rs  market.rs  mod.rs  table.rs  user.rs
api/src/repository/: game_repository.rs  market_repository.rs  mod.rs  salon_repository.rs  table_repository.rs  user_repository.rs
api/src/services/: mod.rs  redis_service.rs  telegram_auth_fairing.rs
infra/k8s/: horse-mongo-depl.yaml  horse-redis-deployment.yml
server/: Cargo.toml
server/src/: main.rs
server/src/config/: mod.rs  mongo_config.rs
server/src/models/: livegame.rs  mod.rs  salon.rs  table.rs  user.rs
server/src/repository/: live_game_repository.rs  mod.rs  salon_repository.rs  table_repository.rs  user_repository.rs
server/src/services/: live_game_socket_services.rs  live_game_socket_services_bot.rs  mod.rs  salon_websocket_service.rs  websocket_service.rs
telegramServices/: app.js  package-lock.json  package.json
