[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.1.1"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["mongodb"] }
mongodb = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.4"
futures = "0.3"
redis = { version = "0.23", features = ["tokio-comp", "aio"] } # Asenkron özellikler için gerekli yapılandırma
uuid = { version = "1.1", features = ["v4"] }
rand = "0.8"
hmac = "0.12.1"            # HMAC kütüphanesi
sha2 = "0.10.6"            # SHA-256 algoritması için kütüphane
digest = "0.10.7" 

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
