[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3" # futures-util kütüphanesini ekliyoruz
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0"
futures = "0.3"
sysinfo = "0.28"
redis = { version = "0.23", features = ["tokio-comp", "aio"] } # Asenkron özellikler için gerekli yapılandırma
rand = "0.8" 
uuid = { version = "1.1", features = ["v4"] }

